test/expressions/noinit/usedWithSync.good
usedWithSync.chpl:1: error: noinit is only supported for arrays
usedWithSync.chpl:2: error: noinit is only supported for arrays
